# cortexmem

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml  pr-gate.yml  release.yml
.minion/: run.json
docs/plans/: 2026-03-08-cortexmem-design.md  2026-03-08-cortexmem-implementation.md  2026-03-09-roadmap-design.md  2026-03-09-v1.0.0-implementation.md  2026-03-09-v1.1.0-design.md  2026-03-09-v1.1.0-implementation.md  2026-03-09-v1.2.0-implementation.md  2026-03-09-v1.3.0-implementation.md  2026-03-09-v1.3.0-v1.5.0-roadmap-design.md  2026-03-09-v1.4.0-implementation.md
migrations/: 001_initial.sql
npm/: .gitignore  package.json
npm/scripts/: install.js
plugin/hooks/: hooks.json
plugin/scripts/: compaction-recovery.sh  session-end.sh  session-start.sh
plugin/skills/memory-protocol/: SKILL.md
scripts/: install.sh  update-homebrew.sh
src/: config.rs  lib.rs  main.rs
src/cli/: cloud.rs  doctor.rs  export.rs  mod.rs  setup.rs  sync.rs
src/cloud/: auth.rs  mod.rs  schema.rs  server.rs  sync.rs
src/db/: feedback.rs  fts.rs  mod.rs  observations.rs  prompts.rs  schema.rs  sessions.rs  sync.rs  vector.rs
src/embed/: mod.rs  model.rs  pipeline.rs
src/http/: mod.rs  routes.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/memory/: autotag.rs  compact.rs  decay.rs  dedup.rs  mod.rs
src/search/: mod.rs  rrf.rs
src/sync/: engine.rs  git.rs  mod.rs  mutations.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/screens/: dashboard.rs  detail.rs  mod.rs  search.rs  sessions.rs  timeline.rs
tests/integration/: autotag_test.rs  cloud_auth_test.rs  config_test.rs  db_test.rs  dedup_test.rs  doctor_test.rs  embed_test.rs  export_test.rs  feedback_test.rs  fts_test.rs  git_sync_test.rs  http_test.rs  lifecycle_test.rs  mcp_lifecycle_test.rs  mcp_prompts_test.rs  mcp_read_test.rs  mcp_test.rs  mcp_write_test.rs  mutation_capture_test.rs  observations_test.rs  prompts_test.rs  reindex_test.rs  search_test.rs  sessions_test.rs  setup_test.rs  sync_db_test.rs  topic_suggest_test.rs  vector_test.rs
